# ma_lib_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: Doxyfile.in
docs/source/: conf.py  index.rst
examples/: CMakeLists.txt  exemple1.cpp  exemple2.cpp
lib/: CMakeLists.txt  ma_lib.cpp  ma_lib.hpp
lib/include/: ma_lib.h
lib/src/: ma_lib.cpp
tests/: CMakeLists.txt  test_ma_lib.cpp
